added fb auth to login page

--- a/app/view/login.html
+++ b/app/view/login.html
@@ -62,6 +62,7 @@
             <button type="submit">Login</button>
         </form>
         <a href="/signup" class="signup-link">Don't have an account? Sign up</a>
+        <a class="button facebook" href="/api/account/auth/facebook">Sign in with Facebook</a>
     </div>
 
     <script>
